--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "next": "^15.3.0",
     "nodemon": "^3.1.9",
     "openai": "^4.93.0"
   }
