--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "heroku-postbuild": "npm install"
   },
   "dependencies": {
